# syntax-parser-generator

./: Cargo.toml  README.md
src/: lexical_analyzer.rs  lib.rs  regex.rs
src/automata/: dfa.rs  dfa_minimize.rs  labeled_dfa.rs  mod.rs  nfa.rs  nfa_to_dfa.rs
src/c/: mod.rs  tests.rs
src/c/lex/: lexeme_types.rs  lexical_analyzer.rs  mod.rs
src/c/parsing/: ast.rs  context.rs  mod.rs  node.rs  parser.rs
src/handle/: auto.rs  core.rs  handle_bit_set.rs  handle_map.rs  handle_vector_map.rs  handled_collection.rs  handled_hash_map.rs  handled_vec.rs  mock.rs  mod.rs  order.rs  serial_number.rs
src/handle/handle_bit_set/: eq.rs  mod.rs  tests.rs
src/handles/: handle.rs  known_cores.rs  mod.rs
src/handles/collections/: handle_map.rs  handled_hash_map.rs  handled_vec.rs  mod.rs
src/handles/specials/: automatically_handled.rs  mod.rs  orderly_handled.rs
src/lex/: lexeme.rs  lexeme_iterator.rs  lexical_analyzer.rs  mod.rs  regex.rs  tests.rs
src/lexical_analyzer/: lexeme_iterator.rs  mod.rs  tests.rs
src/parser/: execution.rs  mod.rs
src/parsing/: mod.rs
src/parsing/lr_parser/: build.rs  execute.rs  execution.rs  mod.rs  rules.rs
src/parsing/translator/: atomic_translator.rs  build.rs  execution.rs  handlers.rs  mod.rs  reduction_handler.rs  sdt.rs  tests.rs
src/reader/: address_based.rs  mod.rs  string_reader.rs  wrapper.rs
src/readers/: address_based.rs  byte_array_reader.rs  mod.rs  reader.rs
tests/: c_lang_test.rs  lex_integration_test.rs
tests/c_lang/: mod.rs
tests/c_lang/lex/: lexeme_types.rs  lexical_analyzer.rs  mod.rs
(+19 files in other folders)
